完成了主页功能

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 
 <body>
-    dwadawdada
+
+    <button id="btnLogout">退出·</button>
+    <script src="/assets/lib/layui/layui.js"></script>
+    <script src="/assets/lib/jquery/jquery.min.js"></script>
+    <script src="/assets/js/baseAPI.js"></script>
+    <script src="/assets/js/index.js"></script>
+    <script></script>
 </body>
 
 </html>
